# DEVINE

./: .gitignore  .gitmodules  .pylintrc  Pythoncodingstandard.md  README.rst  devine.launch  load-documentation.sh
config/: CMakeLists.txt  MANIFEST.in  MANIGEST.in  setup.py
config/parameters/: DEVINEParameters.py
config/scripts/: devinetopics.py  topics
config/src/: DEVINEParameters.py  __init__.py
config/src/devine_config/: __init__.py
config/src/devine_config/static/: Parameters.ini  Parameters.json
dashboard/: README.rst
dashboard/src/: app.js  gamestate.js
dashboard/views/: index.html  publisher.html
docker/: Dockerfile  build-base.sh  run-audio.sh
docker/base/: Dockerfile
docs/: README.rst  gen_doc.sh  requirements.txt  serve_doc.sh
docs/source/: .sphinx-server.yml  index.rst
game_system/: README.md  requirements.txt  setup.py
game_system/src/: GameSystem.py  client.py  game_system.py  test.py
guesswhat/: README.md  README.rst  install_package.bash  play_oracle_pretrained.sh
guesswhat/devine_guesswhat/: package.xml
image_processing/: README.md  README.rst  install_package.bash
image_processing/devine_image_processing/: package.xml
kinect/: README.md  README.rst
robot_control/example/: example_emotion.py  example_point.py
robot_control/irl_control/: README.md  README.rst
scripts/: devinewatchdog.sh  installutils.sh
snips/: README.rst  install_package.bash  install_package.zsh  readme.md
snips/assistant/: assistant.json  trained_assistant.json
snips/snips/: CMakeLists.txt  package.xml
src/scene_finder/: package.xml
(+110 files in other folders)
